k8s/apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: test.pandatrax.net
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - test.pandatrax.net
      secretName: test-pandatrax-net-tls
  rules:
    - host: test.pandatrax.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
